<resources>
    <string name="app_name">MusicList</string>
    <string name="aperte_aqui">Aperte Aqui</string>
    <string name="digite_o_novo_texto">Digite um novo titulo</string>
    <string name="lista_de_musicas_boas">Melhores musicas Nirvana</string>
    <string name="nome_da_musica">Nome da musica</string>
    <string name="artista">Artista</string>
    <string name="voltar">Voltar</string>
    <string name="aperte_no_botao_para_ver_o_toast">Aperte no botao para ver o Toast</string>
    <string name="digite_seu_nome">Digite Seu Nome</string>
    <string name="ok">OK</string>
    <string name="editar">Editar</string>
    <string name="o_que_achou_das_musicas">O que achou das musicas ?</string>
    <string name="timas">Ótimas</string>
    <string name="boas">Boas</string>
    <string name="ruins">Ruins</string>
    <string name="modo_noturno">Modo Claro</string>
    <string name="vWeb">Versão Web</string>
    <string name="configuracoes">Configurações</string>
    <string name="sobre_nos">Sobre Nos</string>
    <string name="somos_uma_equipe_formada_por_eu_e_deus_com_a_inten_o_de_mostrar_musicas_boas_para_as_demais_pessoas_para_deixar_o_seu_dia_mais_feliz">Somos uma equipe formada por \'eu e Deus\' com a intenção de mostrar musicas boas para as demais pessoas, para deixar o seu dia mais feliz.</string>
    <string name="wemerson_monteiro_nufc_ndev_mobile">Wemerson Monteiro\n  UFC\n Dev. Mobile</string>
    <string name="wemerson_damasceno_nufc_nfront_end_designer">Wemerson Damasceno UFC Front-end Designer</string>
    <string name="bandas">Clique Aqui</string>
    <string name="pearl_jam">Pearl Jam</string>
    <string name="guns_n_roses">Guns n Roses</string>
    <string name="nirvana">Nirvana</string>
    <string name="saiba_mais_sobre_as_banda_de_rock">Saiba mais sobre as banda de rock</string>
    <string name="suas_musicas">Musicas</string>
    <string name="principal">Principal</string>
    <string name="deus_criador_nuniverso_nthe_best_support">Deus Criador Universo The Best Support</string>
    <string name="feedback">Feedback</string>
</resources>
