<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SobreNosFragment">

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fundo"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/sobre_nos"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp"
                    android:textStyle="bold" />


                <ImageView
                    android:id="@+id/imagem"
                    android:layout_width="match_parent"
                    android:layout_height="270dp"
                    android:src="@drawable/sobrenos" />

                <TextView
                    android:id="@+id/txt2"
                    android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/somos_uma_equipe_formada_por_eu_e_deus_com_a_inten_o_de_mostrar_musicas_boas_para_as_demais_pessoas_para_deixar_o_seu_dia_mais_feliz"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="italic" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/img1"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/btn_foto_arredondada"
                        android:src="@drawable/dev" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="110dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="20dp"
                        android:layout_toEndOf="@+id/img1"
                        android:src="@drawable/deus" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/img1"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="3dp"
                        android:gravity="center"
                        android:text="@string/wemerson_monteiro_nufc_ndev_mobile"
                        android:textColor="#FFFFFF" />

                    <TextView
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/img1"
                        android:layout_marginStart="230dp"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/deus_criador_nuniverso_nthe_best_support"
                        android:textColor="#FFFFFF" />
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>


    </LinearLayout>

</FrameLayout>